k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pusterom
  labels:
    app.kubernetes.io/name: pusterom
spec:
  selector:
    app.kubernetes.io/name: pusterom
  ports:
    - name: http
      port: 80
      targetPort: http
